# dustcrate

./: .clang-format  .gitignore  BAD_MOFO_IMPLEMENTATION.md  CMakeLists.txt  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  Doxyfile  README.md  VELUM_STROKE_IMPLEMENTATION.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
Source/: CharacterProcessor.cpp  CharacterProcessor.h  MacroLFO.cpp  MacroLFO.h  MidiLearnManager.cpp  MidiLearnManager.h  MidiOutputPanel.cpp  MidiOutputPanel.h  MpcExportEngine.cpp  MpcExportEngine.h  MpcKitPanel.cpp  MpcKitPanel.h  PackImportWizard.cpp  PackImportWizard.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowserBar.cpp  PresetBrowserBar.h  PresetManager.cpp  PresetManager.h  PresetValidator.cpp  PresetValidator.h  SampleLibrary.cpp  SampleLibrary.h  SamplePreview.cpp  SamplePreview.h  SampleVoice.cpp  SampleVoice.h  SlicerPanel.cpp  SlicerPanel.h  WaveformDisplay.cpp  WaveformDisplay.h
Tests/: CMakeLists.txt  Main.cpp  PresetValidatorTest.cpp  SampleLibraryTest.cpp
assets/fonts/: README.md
packs/: factory_pack.json
scripts/: generate_placeholder_assets.py
